added some text

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <title>hello</title>
 <body>
-  <h1>Hello Coding Girls BSU</h1>
+  <h1>Hello Coding Girls BSU Lipa</h1>
+  <h2>thank you for teaching us how to code</h2>
 </body>
 </html>
