--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
-<title>hello updated by drupinas</title>
+<title>we are the coding girls Batangas</title>
 <body>
-  <h1>Hello Coding Girls BSU</h1>
+  <h1>teamwork is the best</h1>
 </body>
 </html>
